--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -178,7 +178,7 @@ if (exists("assignation2"))
   assignation2("A01Ga_biology_challenge", part = NULL,
     url = "https://github.com/BioDataScience-Course/A01Ga_biology_challenge",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-006' = "https://classroom.github.com/g/PgUQBl4h",
       'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "Es-tu un as de la biologie ?")
 ```
@@ -412,7 +412,7 @@ if (exists("assignation"))
   assignation("A01Ia_21M_covid19", part = NULL,
     url = "https://github.com/BioDataScience-Course/A01Ia_21M_covid19",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-006' = "https://classroom.github.com/a/uyNDOTzd",
       'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "Premier projet en science des données")
 ```
