--- a/03-Visualisation-II.Rmd
+++ b/03-Visualisation-II.Rmd
@@ -400,3 +400,7 @@ if (exists("assignation2"))
 Ce module 3 vous a permis de réaliser différents graphiques uni- et bivariés afin de visualiser la *distribution* de variables quantitatives seules ou en fonction des niveaux d'une variable qualitative (facteur). Pour évaluer votre compréhension de cette matière vous aviez les exercices suivants à réaliser\ :
 
 `r show_ex_toc()`
+
+##### Progression {-}
+
+`r launch_report("03", height = 500)`
