--- a/09-Moyenne.Rmd
+++ b/09-Moyenne.Rmd
@@ -1033,3 +1033,7 @@ if (exists("assignation2"))
 Vous venez de terminer le module 9. Ce module vous a permis d'apprendre une grande partie des subtilités qui se cachent derrière la moyenne qui peut nous sembler si simple. Pour évaluer votre compréhension de cette matière vous aviez les exercices suivants à réaliser\ :
 
 `r show_ex_toc()`
+
+##### Progression {-}
+
+`r launch_report("09", height = 500)`
