--- a/11-Variance-II.Rmd
+++ b/11-Variance-II.Rmd
@@ -940,3 +940,6 @@ Vous venez de terminer le module 11. Ce module vous a permis d'apprendre une gra
 
 `r show_ex_toc()`
 
+##### Progression {-}
+
+`r launch_report("11", height = 500)`
