--- a/02-Visualisation-I.Rmd
+++ b/02-Visualisation-I.Rmd
@@ -182,7 +182,7 @@ if (exists("assignation"))
   assignation("A02Ga_nuagepoints", part = "I",
     url = "https://github.com/BioDataScience-Course/A02Ga_nuagepoints",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-006' = "https://classroom.github.com/a/iqyTXntV",
       'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "Graphiques sur `urchin_bio`, partie I : script R")
 ```
@@ -261,7 +261,7 @@ if (exists("assignation"))
   assignation("A02Ga_nuagepoints", part = "II",
     url = "https://github.com/BioDataScience-Course/A02Ga_nuagepoints",
     course.urls = c(
-      'S-BIOG-006' = "https://classroom.github.com/a/...",
+      'S-BIOG-006' = "https://classroom.github.com/a/iqyTXntV",
       'S-BIOG-921' = "https://classroom.github.com/a/..."),
     toc = "Graphiques sur `urchin_bio`, partie II : R Markdown")
 ```
