--- a/03-Visualisation-II.Rmd
+++ b/03-Visualisation-II.Rmd
@@ -6,7 +6,7 @@ SciViews::R
 
 ##### Objectifs {-}
 
-- Être capable de réaliser différentes variantes de graphiques visant à montrer *comment les données se distribuent* tel que les histogrammes, les graphes de densité ou encore les diagrammes en violon dans R avec la fonction `chart()`
+- Être capable de réaliser différentes variantes de graphiques visant à montrer *comment les données se distribuent* telles que les histogrammes, les graphes de densité ou encore les diagrammes en violon dans R avec la fonction `chart()`
 
 - Intégrer des graphiques dans un rapport et y décrire ce que vous observez
 
@@ -14,7 +14,26 @@ SciViews::R
 
 ##### Prérequis {-}
 
-Pour réaliser les exercices dans ce module, vous devez être capables de travailler dans la SciViews Box et dans RStudio. Vous devez également maîtriser les bases de Git et de GitHub. Tout ceci est enseigné dans le module \@ref(intro). Vous devez également être familiarisés avec les graphiques dans R et R Markdown, une matière qui fait l'objet du module \@ref(visu1).
+Tout comme pour le module \@ref(visu1), il est indispensable de maitriser les outils comme encore RStudio, SciViews Box, Renku. Ils ont tous été enseignés dans le module \@ref(intro). 
+
+Ce module va vous permettre de découvrir de nouveaux graphiques à réaliser avec R. Vous devez donc maitriser les instructions R qui permettent de réaliser un graphique.
+
+##### À vous de jouer ! {-}
+
+`r h5p(178, height = 270, toc = NULL)`
+
+Ces graphiques vont être réalisés dans des scripts R et dans des documents R Markdown. Il est dès lors indispensable de bien comprendre les différences entre ces deux approches.
+
+##### À vous de jouer ! {-}
+
+`r h5p(179, height = 270, toc = NULL)`
+
+La fin de ce module va traiter de la gestion des conflits dans GitHub. Vous devez maitriser GitHub et Git.
+
+
+##### À vous de jouer ! {-}
+
+`r h5p(180, height = 270, toc = NULL)`
 
 ## Histogramme
 
@@ -35,7 +54,7 @@ chart(data = zooplankton, ~ size) +
 
 Outre l'histogramme lui-même, représenté par des barres de hauteur équivalentes au nombre d'observations réalisées dans les différentes classes, les éléments suivants sont également indispensables à la compréhension du graphique (ici mis en évidence en couleur)\ :
 
-- Les axes avec les graduations (en rouge). Su l'axe des abscisses, les classes de tailles, et sur l'axe des ordonnées, les effectifs
+- Les axes avec les graduations (en rouge). Su l'axe des abscisses, les classes de taille, et sur l'axe des ordonnées, les effectifs
 - les labels des axes et l'unité (pour l'axe des abscisses uniquement ici) (en bleu)
 
 Les instructions dans R afin de produire un histogramme à l'aide de la fonction `chart()` sont\ :
@@ -52,7 +71,11 @@ chart(data = zooplankton, ~ size) +
 
 La fonction `chart()` requiert comme argument le jeu de donnée (`data = zooplankton`), ainsi que la formule à employer dans laquelle vous avez indiqué le nom de la variable que vous voulez sur l'axe des abscisses à droite de la formule, après le tilde `~`. Parmi toutes les variables du jeu de données, nous avons choisi ici de représenter `size`. Jusqu'ici, nous avons spécifié _ce que_ nous voulons représenter, mais pas encore _comment_ (sous quelle apparence), nous voulons matérialiser cela sur le graphique. Avec les graphiques de type `ggplot()` que nous réalisons ici à l'aide de `chart()`, nous **ajoutons** des couches au graphique à l'aide de l'opérateur `+`.  Pour un histogramme, nous devons ajouter une couche avec la fonction `geom_histogram()`, tout comme pour le nuage de point, nous utilisions `geom_point()`. L'argument `bins=` dans cette fonction permet de préciser le nombre de classes souhaitées. Le découpage en classe de la variable `size` se fait ici automatiquement.
 
-Vous pouvez décrypter votre histogramme sur base des **modes**^[Les **modes** d'un histogramme correspondent à des classes plus abondantes localement, c'est-à-dire que les classes à gauche et à droite du mode comptent moins d’occurrences que lui.] et de la **symétrie**^[Un histogramme est dit **symétrique** lorsque son profil à gauche est identique ou très similaire à son profil à droite autour d'un mode.] de ces derniers. Un histogramme peut être **unimodal** (un seul mode), **bimodal** (deux modes) ou **multimodal** (plus de deux modes). En général, s'il y a plus d'un mode, nous pouvons suspecter que des sous-populations distinctes existent dans les données (par exemple\ : différence morphométriques entre mâles et femelles pour une espèce au dimorphisme sexuel marqué).
+##### À vous de jouer ! {-}
+
+`r h5p(172, height = 270, toc = "Les fonctions chart() et geom_histogram()")`
+
+Vous pouvez décrypter votre histogramme sur base des **modes**^[Les **modes** d'un histogramme correspondent à des classes plus abondantes localement, c'est-à-dire que les classes à gauche et à droite du mode comptent moins d’occurrences que lui.] et de la **symétrie**^[Un histogramme est dit **symétrique** lorsque son profil à gauche est identique ou très similaire à son profil à droite autour d'un mode.] de ces derniers. Un histogramme peut être **unimodal** (un seul mode), **bimodal** (deux modes) ou **multimodal** (plus de deux modes). En général, s'il y a plus d'un mode, nous pouvons suspecter que des sous-populations distinctes existent dans les données (par exemple\ : des différences morphométriques entre mâles et femelles pour une espèce au dimorphisme sexuel marqué).
 
 ```{r histo-mode, fig.cap = "Histogrammes montrant les modes et symétries : A. histogramme unimodal et symétrique, B. histogramme bimodal et asymétrique, C. histogramme unimodal et asymétrique, D. histogramme multimodal et symétrique.", echo=FALSE, message=FALSE, warning=FALSE}
 set.seed(1000)
@@ -80,11 +103,16 @@ combine_charts(list(g1, g2, g3, g4))
 rm(g1, g2, g3, g4, df1, df2, df3, df4)
 ```
 
+##### À vous de jouer ! {-}
+
+`r h5p(171, height = 270, toc = "Modes et symétries")`
+
+
 ### Nombre de classes
 
 Vous devez être particulièrement vigilant lors de la réalisation d'un histogramme aux classes définies pour ce dernier. 
 
-```{r histo-classes, fig.cap = "Choix des classes. A. histogramme initial montrant la répartition des tailles au sein d'organismes planctoniques. B., C., D. Même histogramme que A, mais en modifiant le nombres de classes."}
+```{r histo-classes, fig.cap = "Choix des classes. A. histogramme initial montrant la répartition des tailles au sein d'organismes planctoniques. B., C., D. Même histogramme que A, mais en modifiant le nombre de classes."}
 # Réalisation du graphique précédent
 a <- chart(data = zooplankton, ~ size) +
   geom_histogram(bins = 50) +
@@ -107,7 +135,7 @@ d <- chart(data = zooplankton, ~ size) +
 combine_charts(list(a, b, c, d))
 ```
 
-Comme vous pouvez le voir à la Fig. \@ref(fig:histo-classes), le changement du nombre de classes peut modifier complètement la perception des données via l'histogramme (notez l'utilisation de la fonction `combine_charts()` pour réaliser une figure composite, nous étudierons cette fonction plus en détails dans le prochain module). Le choix idéal est un compromis entre plus de classes (donc plus de détails), et un découpage raisonnable en fonction de la quantité de données disponibles. Si l'intervalle des classes est trop petit, l'histogramme sera illisible. Si l'intervalle des classes est trop grand, il sera impossible de visualiser correctement les différents modes. Dans la figure en exemple, les variantes A et B sont acceptables, mais les C et D manquent de détails.
+Comme vous pouvez le voir à la Fig. \@ref(fig:histo-classes), le changement du nombre de classes peut modifier complètement la perception des données via l'histogramme (notez l'utilisation de la fonction `combine_charts()` pour réaliser une figure composite, nous étudierons cette fonction plus en détail dans le prochain module). Le choix idéal est un compromis entre plus de classes (donc plus de détails), et un découpage raisonnable en fonction de la quantité de données disponibles. Si l'intervalle des classes est trop petit, l'histogramme sera illisible. Si l'intervalle des classes est trop grand, il sera impossible de visualiser correctement les différents modes. Dans la figure en exemple, les variantes A et B sont acceptables, mais les C et D manquent de détails.
 
 ##### À vous de jouer ! {-}
 
@@ -133,12 +161,12 @@ Lors de l'analyse de jeux de données, vous serez amené à réaliser un histogr
 ```{block2, type='note'}
 Une **variable qualitative** ou **variable facteur** est une variable qui représente des *catégories*. Par exemple, une couleur, le genre, une classe taxonomique, ... Les différentes catégories possibles pour la variable sont appelées **niveaux** ou **modalités** (*levels* en anglais). Pour le genre, nous auront donc deux niveaux\ : "homme" ou "femme".
 
-Les variables facteurs peuvent aussi représenter un petit nombre de classes différentes^[Une variable sera considérée comme qualitative ou facteur, si elle possède moins d'une dizaine de niveaux pour fixer les idées, mais il n'existe pas de limite stricte entre une variable numérique quantitative et facteur qualitative, en réalité. C'est à votre appréciation mais aussi en fonction du contexte.] réalisées par découpage d'une **variable numérique**. Par exemple, si au lieu de reprendre la taille d'un animal, nous nous contentons de considérer s'il est "petit", "moyen" ou "grand". Dans ce cas, il existe un ordre logique entre les niveaux\ : petit < moyen < grand. La variable sera alors dite "qualitative ordonnée" et sera représentée par un objet `ordered` dans R. Sinon, la variable sera **qualitative non ordonnée** et sera un objet `factor` dans R.
+Les variables facteurs peuvent aussi représenter un petit nombre de classes différentes^[Une variable sera considérée comme qualitative ou facteur, si elle possède moins d'une dizaine de niveaux pour fixer les idées, mais il n'existe pas de limite stricte entre une variable numérique quantitative et facteur qualitative, en réalité. C'est à votre appréciation, mais aussi en fonction du contexte.] réalisées par découpage d'une **variable numérique**. Par exemple, si au lieu de reprendre la taille d'un animal, nous nous contentons de considérer s'il est "petit", "moyen" ou "grand". Dans ce cas, il existe un ordre logique entre les niveaux\ : petit < moyen < grand. La variable sera alors dite "qualitative ordonnée" et sera représentée par un objet `ordered` dans R. Sinon, la variable sera **qualitative non ordonnée** et sera un objet `factor` dans R.
 
 Les variables numériques sont représentées par des nombres, donc `numeric` ou `integer` (des entiers) dans R. Attention que les variables facteur peuvent très bien être importées comme chaînes de caractères (objet `character`), et il faudra peut-être les convertir à l'aide des fonctions `factor()` ou `ordered()` avant de les utiliser.
 ````
 
-Par exemple, dans un jeu de données sur des fleurs d'iris, la variable `species`^[Attention\ : le jeu de donnée `iris` est un grand classique dans R, mais lorsqu'il est chargé à l'aide de la fonction `read()` du package **data.io**, le nom de ses variables est modifié pour suivre la convention "snake-case" qui veut que seules des lettres minuscules soient utilisées et que les mots soient séparés par un trait souligné `_`. Ainsi, dans le jeu de données d'origine, les variables sont nommées `Petal_Length` ou `Species`. Ici, ces même variables se nomment `petal_length` et `species`.] représente l'espèce d'iris étudiée (trois espèces différentes : *I. setosa*, *I. versicolor* et *I. virginica*).
+Par exemple, dans un jeu de données sur des fleurs d'iris, la variable `species`^[Attention\ : le jeu de donnée `iris` est un grand classique dans R, mais lorsqu'il est chargé à l'aide de la fonction `read()` du package **data.io**, le nom de ses variables est modifié pour suivre la convention "snake-case" qui veut que seules des lettres minuscules soient utilisées et que les mots soient séparés par un trait souligné `_`. Ainsi, dans le jeu de données d'origine, les variables sont nommées `Petal_Length` ou `Species`. Ici, ces mêmes variables se nomment `petal_length` et `species`.] représente l'espèce d'iris étudiée (trois espèces différentes : *I. setosa*, *I. versicolor* et *I. virginica*).
 
 ```{r histo-facteurs, fig.cap= "Distribution des longueurs de sépales de trois espèces d'iris."}
 # Importation du jeu de données
@@ -152,7 +180,7 @@ chart(data = iris, ~ sepal_length %fill=% species) +
 
 Ici, nous avons tracé un histogramme unique, mais en prenant soin de colorier les barres en fonction de l'espèce. La formule fait toujours intervenir la variable numérique à découper en classes à la droite du tilde `~`, ici `sepal_length`, mais nous y avons ajouté une directive supplémentaire pour indiquer que le remplissage des barres (`%fill=%`) doit se faire en fonction du contenu de la variable `species`.
 
-Nous avons ici un bon exemple d'histogramme multimodal lié à la présence de trois sous-populations (les trois espèces différentes) au sein d'un jeu de données unique. Le rendu du graphique n'est pas optimal. Voici deux astuces pour l'améliorer. La premières consiste à représenter trois histogrammes séparés, mais rassemblés dans une même figure. Pour cela, nous utilisons des **facettes** (`facets`) au lieu de l'argument `%fill=%`. Dans `chart()`, les facettes peuvent être spécifiées an utilisant l'opérateur `|` dans la formule.
+Nous avons ici un bon exemple d'histogramme multimodal lié à la présence de trois sous-populations (les trois espèces différentes) au sein d'un jeu de données unique. Le rendu du graphique n'est pas optimal. Voici deux astuces pour l'améliorer. La première consiste à représenter trois histogrammes séparés, mais rassemblés dans une même figure. Pour cela, nous utilisons des **facettes** (`facets`) au lieu de l'argument `%fill=%`. Dans `chart()`, les facettes peuvent être spécifiées an utilisant l'opérateur `|` dans la formule.
 
 ```{r histo-facettes, fig.cap= "Distribution de la longueur des sépales de trois espèces d'iris (en employant les facettes pour séparer les espèces)."}
 chart(data = iris, ~ sepal_length | species) +
@@ -160,12 +188,12 @@ chart(data = iris, ~ sepal_length | species) +
   ylab("Effectifs")
 ```
 
-L'histogramme est maintenant séparé en trois en fonction des niveaux de la variable facteur `species`. Cela rend la lecture plus aisée. Une seconde solution combine les facettes avec `|` et l'argument `%fill=%`^[Astuce proposée [ici](https://drsimonj.svbtle.com/plotting-background-data-for-groups-with-ggplot2).]. Il faut ensuite ajouter par derrière un histogramme grisé de l'ensemble des données.
+L'histogramme est maintenant séparé en trois en fonction des niveaux de la variable facteur `species`. Cela rend la lecture plus aisée. Une seconde solution combine les facettes avec `|` et l'argument `%fill=%`^[Astuce proposée [ici](https://drsimonj.svbtle.com/plotting-background-data-for-groups-with-ggplot2).]. Il faut ensuite ajouter par-derrière un histogramme grisé de l'ensemble des données.
 
-```{r histo-facteurs-facettes, fig.cap= "Distribution des longueurs de sépales de trois espèces d'iris (avec facettes et histogrammes complets grisés en arrière plans)."}
+```{r histo-facteurs-facettes, fig.cap= "Distribution des longueurs de sépales de trois espèces d'iris (avec facettes et histogrammes complets grisés en arrière-plans)."}
 nbins <- 25
 chart(data = iris, ~ sepal_length %fill=% species | species) +
-  # histogramme d'arrière plan en gris ne tenant pas compte de la variable species
+  # histogramme d'arrière-plan en gris ne tenant pas compte de la variable species
   geom_histogram(data = select(iris, -species), fill = "grey", bins = nbins) + 
   geom_histogram(show.legend = FALSE, bins = nbins) +
   ylab("Effectifs") +
@@ -229,6 +257,10 @@ Ici, nous utilisons donc la fonction `geom_density()`.
 
 ##### À vous de jouer ! {-}
 
+`r h5p(173, height = 270, toc = "La fonction chart() et geom_density()")`
+
+##### À vous de jouer ! {-}
+
 **Note\ : cette assignation individuelle couvre l'ensemble de la matière de ce module. N'hésitez pas à la réaliser en parallèle de votre lecture.**
 
 ```{r, echo=FALSE, results='asis'}
@@ -273,6 +305,10 @@ chart(data = zooplankton_sub, size ~ class) +
 ```
 
 Ici, la formule fournie à `chart()` indique la variable numérique à représenter par un graphe de densité _dans le terme de gauche_, et la variable facteur qui découpe l'échantillon en classes _à droite_\ : `YNUM (size) ~ XFACT (class)`. Pour réaliser un graphique de densité vous devez ensuite ajouter la fonction `geom_violin()`. Vous pouvez aussi utiliser `%fill=%` pour colorer vos différents graphes en fonction de la variable facteur également, comme dans la Fig.\ \@ref(fig:violin-plot).
+
+##### À vous de jouer ! {-}
+
+`r h5p(174, height = 270, toc = "La fonction chart() et geom_violin()")`
 
 ##### Pièges et astuces {-}
 
@@ -323,11 +359,11 @@ Jusqu'à présent vous avez réalisé plusieurs assignations individuelles. Cepe
 
 ### Ajout d'un collaborateur
 
-Partons directement d'un cas pratique entre deux chercheurs. [Marie](https://github.com/MarieHuart93) prend contact avec [Guyliann](https://github.com/GuyliannEngels) afin de collaborer sur un projet lié à la [biométrie humaine](https://github.com/MarieHuart93/biometry). Guyliann accepte volontiers de l'aider. Cependant, Marie doit lui donner accès à son dépôt. Pour cela, elle se rend dans sur son dépôt, puis va dans `Settings` puis `Manage access` et enfin ajoute un collaborateur en cliquant sur `Invite a collaborator`.
+Partons directement d'un cas pratique entre deux chercheurs. [Marie](https://github.com/MarieHuart93) prend contact avec [Guyliann](https://github.com/GuyliannEngels) afin de collaborer sur un projet lié à la [biométrie humaine](https://github.com/MarieHuart93/biometry). Guyliann accepte volontiers de l'aider. Cependant, Marie doit lui donner accès à son dépôt. Pour cela, elle se rend dans sur son dépôt, puis va dans `Settings` puis `Manage access` et enfin, ajoute un collaborateur en cliquant sur `Invite a collaborator`.
 
 `r img("sdd1_03/add_collaborators.gif")`
 
-Guyliann reçoit un mail afin d'accepter ou non de collaborer. S'il l'accepte, il obtient alors des droits en écriture sur le dépôt de Marie, ce qui lui permettra de réaliser des pushes. Il peut maintenant cloner le projet en local sur son ordinateur pour y travailler en parallèle avec Marie. 
+Guyliann reçoit un mail afin d'accepter ou non de collaborer. S'il l'accepte, il obtient alors des droits en écriture sur le dépôt de Marie, ce qui lui permettra de réaliser des pushs. Il peut maintenant cloner le projet en local sur son ordinateur pour y travailler en parallèle avec Marie. 
 
 ```{block2, type='warning'}
 Si, lors de votre premier push vous avez un message d'erreur indiquant que vous n'avez pas la permission en écriture sur ce dépôt, il y a des chances pour que vous ayez cloné un dépôt qui n'est pas le vôtre, ou pour lequel vous n'êtes pas collaborateur (par exemple, un template de BioDataScience-Course). Faites toujours attention avant de cloner un dépôt et vérifiez vos droits dessus. Sinon, vous pouvez toujours forker un dépôt public appartenant à quelqu'un d'autre, et cloner ensuite votre fork... mais cela est une autre histoire.
@@ -353,9 +389,9 @@ Une issue doit également être fermée lorsque le sujet de cette dernière a é
 
 La collaboration entre plusieurs personnes mène inévitablement à la gestion de conflits. N'ayez pas peur des conflits (au sens de GitHub, en tous cas). Il suffit de les gérer, ce que nous allons apprendre ici.
 
-Imaginons que nos deux collaborateurs réalisent une modification du documents `biometry_note.Rmd` *en même temps* et *sur la même partie* du document. 
+Imaginons que nos deux collaborateurs réalisent une modification du document `biometry_note.Rmd` *en même temps* et *sur la même partie* du document. 
 
-`r h5p(30, height = 270, toc = "Deux versions d'un même fichier")`
+`r h5p(175, height = 270, toc = "Deux versions d'un même fichier")`
 
 Que va-t-il se passer selon vous\ ? Lequel des deux collaborateurs va-t-il avoir le droit d'écraser le contenu de l'autre\ ? GitHub n'est pas capable de décider quelle version est la meilleure. Il va donc demander au dernier collaborateur qui réalise son `push` de gérer ce conflit lui-même.
 
@@ -363,11 +399,11 @@ Que va-t-il se passer selon vous\ ? Lequel des deux collaborateurs va-t-il avoir
 
 On peut voir que lorsque le `push` est réalisé, une erreur apparaît. Il faut d'abord réaliser un `pull` afin de récupérer ce qui est sur GitHub. 
 
-`r h5p(29, height = 270, toc = "Résolution d'un conflit")`
+`r h5p(176, height = 270, toc = "Résolution d'un conflit")`
 
 Vous pouvez ensuite vous rendre dans chaque fichier problématique pour retrouver la/les zone(s) de conflit (utiliser l'outil de recherche avec l'icône loupe dans l'éditeur RStudio et recherchez par exemple `>>>>>`).
 
-`r h5p(31, height = 270, toc = "Résolution d'un conflit (suite)")`
+`r h5p(177, height = 270, toc = "Résolution d'un conflit (suite)")`
 
 La résolution est simple à faire. Vous devez choisir la partie qui vous semble la plus pertinente et effacer tout le reste, y compris les balises ajoutées par GitHub.
 
@@ -378,7 +414,7 @@ La gestion du conflit se termine par la réalisation d'un `commit` avec un messa
 ```{block2, type='note'}
 Lorsque vous vous lancez dans un projet ou revenez vers lui, il faut toujours faire un `pull` afin de vous assurer que vous travaillez bien avec la dernière version en ligne sur GitHub. 
 
-Lorsque vous avez terminé de travailler sur un projet. Il est conseillé de faire toujours un `commit`, suivi d'un `pull` en vérifiant bien si des modifications sont réalisées qu'il n'y a pas de conflits (sinon, on les règle directement) et enfin un `push`. **Ne laissez jamais trainer un conflit\ ! C'est une situation treansitoire normale de votre dépôt, mais qui nécessite une intervention rapide pour l'éliminer avant que d'autres `commit`s ne viennent rendre la situtation plus complexe.**
+Lorsque vous avez terminé de travailler sur un projet. Il est conseillé de faire toujours un `commit`, suivi d'un `pull` en vérifiant bien si des modifications sont réalisées qu'il n'y a pas de conflits (sinon, on les règle directement) et enfin un `push`. **Ne laissez jamais trainer un conflit\ ! C'est une situation transitoire normale de votre dépôt, mais qui nécessite une intervention rapide pour l'éliminer avant que d'autres `commits`ne viennent rendre la situation plus complexe.**
 ````
 
 ##### À vous de jouer ! {-}
